@@ -18,45 +18,19 @@ package org.powermock.reflect.internal;
 import org.objenesis.Objenesis;
 import org.objenesis.ObjenesisStd;
 import org.objenesis.instantiator.ObjectInstantiator;
-import org.powermock.reflect.exceptions.ConstructorNotFoundException;
-import org.powermock.reflect.exceptions.FieldNotFoundException;
-import org.powermock.reflect.exceptions.MethodInvocationException;
-import org.powermock.reflect.exceptions.MethodNotFoundException;
-import org.powermock.reflect.exceptions.TooManyConstructorsFoundException;
-import org.powermock.reflect.exceptions.TooManyFieldsFoundException;
-import org.powermock.reflect.exceptions.TooManyMethodsFoundException;
+import org.powermock.reflect.exceptions.*;
 import org.powermock.reflect.internal.comparator.ComparatorFactory;
-import org.powermock.reflect.internal.matcherstrategies.AllFieldsMatcherStrategy;
-import org.powermock.reflect.internal.matcherstrategies.AssignableFromFieldTypeMatcherStrategy;
-import org.powermock.reflect.internal.matcherstrategies.AssignableToFieldTypeMatcherStrategy;
-import org.powermock.reflect.internal.matcherstrategies.FieldAnnotationMatcherStrategy;
-import org.powermock.reflect.internal.matcherstrategies.FieldMatcherStrategy;
-import org.powermock.reflect.internal.matcherstrategies.FieldNameMatcherStrategy;
+import org.powermock.reflect.internal.matcherstrategies.*;
 import org.powermock.reflect.internal.primitivesupport.BoxedWrapper;
 import org.powermock.reflect.internal.primitivesupport.PrimitiveWrapper;
 import org.powermock.reflect.matching.FieldMatchingStrategy;
 import org.powermock.reflect.spi.ProxyFramework;
 
 import java.lang.annotation.Annotation;
-import java.lang.reflect.Array;
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.InvocationHandler;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
-import java.lang.reflect.Modifier;
-import java.lang.reflect.Proxy;
+import java.lang.reflect.*;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.LinkedHashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 /**
  * Various utilities for accessing internals of a class. Basically a simplified
@@ -1946,7 +1920,7 @@ public class WhiteboxImpl {
      * @param argumentTypes       the argument types
      * @return the all metods except
      */
-    public static <T> Method[] getAllMetodsExcept(Class<T> type, String methodNameToExclude, Class<?>[] argumentTypes) {
+    public static <T> Method[] getAllMethodsExcept(Class<T> type, String methodNameToExclude, Class<?>[] argumentTypes) {
         Method[] methods = getAllMethods(type);
         List<Method> methodList = new ArrayList<Method>();
         outer:
