@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
 * Fix #668 @Mock fields are not injected anymore (1.6.5 regression)
+* Renamed org.powermock.reflect.internal.WhiteboxImpl.getAllMetodsExcept to org.powermock.reflect.internal.WhiteboxImpl.getAllMethodsExcept (typo)
 
 Change log 1.6.5 (2015-04-30)
 -----------------------------
